# fucking-game-tester-tool

./: adbtool.py
monkeychenTSL/Python_Tsl/: .flake8  .pdm-python  Dockerfile  conftest.py  db.sqlite3  make_vue_files.py  make_vue_ts.py  manage.py  nginx.conf  pyproject.toml  pytest.ini  pyvenv.cfg  requirements.txt
monkeychenTSL/Python_Tsl/TSL_work/: Dockerfile  conftest.py  extract.yaml  main.py  main_by_django.py  pytest.ini  requirements.txt
monkeychenTSL/Python_Tsl/Temporary_storage/: extract.yaml  test_aa.yaml
monkeychenTSL/Python_Tsl/Tesla/: asgi.py  pagination.py  renderer.py  settings.py  urls.py  wsgi.py
monkeychenTSL/Python_Tsl/account/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
monkeychenTSL/Python_Tsl/case_api/: aa.json  aa.yaml  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
monkeychenTSL/Python_Tsl/case_ui/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
monkeychenTSL/Python_Tsl/htmlcov/: d_26bea54b099c22ed_0001_initial_py.html  d_26bea54b099c22ed_0002_feedback_user_py.html  d_26bea54b099c22ed_0003_alter_feedback_options_py.html  d_26bea54b099c22ed___init___py.html  d_484c57caddc639fc___init___py.html  d_484c57caddc639fc_accounts_urls_py.html  d_484c57caddc639fc_admin_py.html  d_484c57caddc639fc_apps_py.html  d_484c57caddc639fc_models_py.html  d_484c57caddc639fc_serializers_py.html  d_484c57caddc639fc_tasks_py.html  d_484c57caddc639fc_tests_py.html  d_484c57caddc639fc_urls_py.html  d_484c57caddc639fc_views_py.html  index.html  status.json
monkeychenTSL/Python_Tsl/project/: admin.py  (+4 more)
(+625 files in other folders)
